--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Orine7/writing-javascript-actions.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Orine",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Orine7/writing-javascript-actions/issues"
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/Orine7/writing-javascript-actions#readme",
   "dependencies": {
     "@actions/core": "^1.6.0"
-  }
+  },
+  "devDependencies": {}
 }
