--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,13 +1,15 @@
-# name: JS Actions
+name: JS Actions
 
-# on: [push]
+on: 
+  pull_request:
+    types: [labeled]
 
-# jobs:
-#   action:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v1
-#       - name: hello-action
-#         uses: ./.github/actions/hello-world
-#         with: 
-#           third-greeting: 'Ximira'
+jobs:
+  action:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: hello-action
+        uses: ./.github/actions/hello-world
+      - name: joke-teller
+        uses: ./.github/actions/joke-action
