--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -13,3 +13,9 @@ jobs:
         uses: ./.github/actions/hello-world
       - name: joke-teller
         uses: ./.github/actions/joke-action
+        id: jokes
+      - name: create-issue
+        uses: ./.github/actions/issue-maker
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          joke: ${{ steps.jokes.outputs.joke-output }}
